# eml-formalization

./: .gitignore  AUDIT_REPORT.md  CITATION.cff  CONTRIBUTING.md  DASHBOARD.md  First_run.md  LICENSE  LICENSING.md  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: lake-build.yml  pages.yml
EML_review_bundle_sources/: EML_REPORT.md  hybrid_report.md  manifest.json  technical_REPORT.tex
EML_review_bundle_sources/paper_source/: EML.bib  EML.tex
eagle_scripts/: INODE_QUOTA_REQUEST.md  build_mathlib.sbatch  rebuild_cache.sbatch  run_chunk.sbatch  verify_all.sbatch  verify_chunks.sbatch  verify_transplant_depths.sbatch
gpt_pro_bundle/frontier_questions/: PROMPT.md  README.md  RESPONSE.md
gpt_pro_bundle/pre_announcement_review/: CODE_EXCERPTS.md  PROJECT_SCOREBOARD.md  README.md  RESPONSE.md
gpt_pro_bundle/trig_widening/: CODE_EXCERPTS.md  PROMPT.md
lambda_lab/: __init__.py
lambda_lab/lab/: __init__.py  history.py  i18n.py
lambda_lab/lab/commands/: __init__.py  aristotle.py  eml.py
lambda_lab/proofs/eml/: .gitignore
lambda_lab/proofs/lean_aristotle/: LambdaAristotle.lean  lake-manifest.json  (+1 more)
mathematica/: README.md
paper/: 00README.json
process_archive/: First_run.md  README.md
process_archive/EML_review_bundle/: paper_extracted.md
process_archive/slides_eml_presentation/: README.md
process_archive/slides_ghostday/: README.md
slides/eml_presentation/: Makefile  README.md  build.sh  eml_presentation.md
slides/ghostday/: build.sh  ghostday.md
slides/ghostday_post_submission/: README.md  build.sh  ghostday_post_submission.md
web/eml-tree-builder/: README.md  eml.js  index.html  style.css
(+434 files in other folders)
