[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-formalization"
version = "1.0.0"
description = "Lean 4 + Mathlib formalization of arXiv:2603.21852 (Odrzywołek, EML)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bartosz Naskręcki" }]
license = { text = "MIT" }

# Runtime dependencies of the Aristotle / EML CLI scaffold (used to
# orchestrate proof submissions; the Lean artefact itself does not
# require any of these).
dependencies = [
    "rich>=13.7",
    "prompt_toolkit>=3.0.43",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["lambda_lab*"]
